--- a/WorldCupContest/Views/Matchups/Edit.cshtml
+++ b/WorldCupContest/Views/Matchups/Edit.cshtml
@@ -24,6 +24,16 @@
                 <span asp-validation-for="MatchupDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="FirstTeamName" class="control-label"></label>
+                <input asp-for="FirstTeamName" class="form-control" />
+                <span asp-validation-for="FirstTeamName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SecondTimeName" class="control-label"></label>
+                <input asp-for="SecondTimeName" class="form-control" />
+                <span asp-validation-for="SecondTimeName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -34,6 +44,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
