--- a/WorldCupContest/Views/Matchups/Index.cshtml
+++ b/WorldCupContest/Views/Matchups/Index.cshtml
@@ -18,6 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.MatchupDate)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstTeamName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SecondTimeName)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +35,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MatchupDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstTeamName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SecondTimeName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
