--- a/WorldCupContest/Views/RegisterTeams/Delete.cshtml
+++ b/WorldCupContest/Views/RegisterTeams/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TeamName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Score)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Score)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
