--- a/WorldCupContest/Views/RegisterTeams/Details.cshtml
+++ b/WorldCupContest/Views/RegisterTeams/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TeamName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Score)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Score)
+        </dd>
     </dl>
 </div>
 <div>
