--- a/WorldCupContest/Views/RegisterTeams/Index.cshtml
+++ b/WorldCupContest/Views/RegisterTeams/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TeamName)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Score)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,6 +26,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.TeamName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Score)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
