--- a/WorldCupContest/Views/RegisterTournaments/Create.cshtml
+++ b/WorldCupContest/Views/RegisterTournaments/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="TournamentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AwayHomeGame" class="control-label"></label>
+                <input asp-for="AwayHomeGame" class="form-control" />
+                <span asp-validation-for="AwayHomeGame" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -33,6 +38,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
