--- a/WorldCupContest/Views/RegisterTournaments/Delete.cshtml
+++ b/WorldCupContest/Views/RegisterTournaments/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TournamentDate)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AwayHomeGame)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AwayHomeGame)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
