--- a/WorldCupContest/Views/RegisterTournaments/Details.cshtml
+++ b/WorldCupContest/Views/RegisterTournaments/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TournamentDate)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AwayHomeGame)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AwayHomeGame)
+        </dd>
     </dl>
 </div>
 <div>
