--- a/WorldCupContest/Views/RegisterTournaments/Index.cshtml
+++ b/WorldCupContest/Views/RegisterTournaments/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TournamentDate)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AwayHomeGame)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TournamentDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AwayHomeGame)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
