Update view and DataBase

--- a/WorldCupContest/Views/Matchups/Details.cshtml
+++ b/WorldCupContest/Views/Matchups/Details.cshtml
@@ -11,25 +11,25 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TeamQuantity)
+           Team Quantity
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TeamQuantity)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MatchupDate)
+            Matchup Date)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MatchupDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstTeamName)
+           First Team Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstTeamName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SecondTimeName)
+            Second Time Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SecondTimeName)
