--- a/WorldCupContest/Views/RegisterTournaments/Details.cshtml
+++ b/WorldCupContest/Views/RegisterTournaments/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TournamentName)
+            Tournamen Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TournamentName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TournamentDate)
+            Tournament Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TournamentDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AwayHomeGame)
+            Away Home Game
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AwayHomeGame)
