--- a/WorldCupContest/Views/Matchups/Index.cshtml
+++ b/WorldCupContest/Views/Matchups/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Matchup home page</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,16 +13,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TeamQuantity)
+                Team Quantity
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MatchupDate)
+                Matchup Date
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstTeamName)
+                First Team Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SecondTimeName)
+                Second Time Name)
             </th>
             <th></th>
         </tr>
