--- a/WorldCupContest/Views/RegisterTeams/Delete.cshtml
+++ b/WorldCupContest/Views/RegisterTeams/Delete.cshtml
@@ -12,13 +12,13 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TeamName)
+            Team Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TeamName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Score)
+            Score
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Score)
